--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
+   
     
+     <div class="container">
+        <div class="content">
+         <h1>Titre</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat expedita, molestias vitae soluta impedit maxime architecto nisi at inventore cupiditate, saepe ullam recusandae aliquid quas optio modi dolorum quae consequuntur!</p>
+            <button class="btn">Suite</button>
+        </div>
+    </div>
 
         <div class="modal-container" id="modal-container">
             <div class="modal" id="modal">
